--- a/condominos.html
+++ b/condominos.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Gestão de Condóminos</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/global.css">
+
 </head>
 <body>
 
