Change script tag for condominos.js to module type

--- a/condominos.html
+++ b/condominos.html
@@ -49,7 +49,7 @@
     <script src="js/firebase-config.js"></script>
 
     <!-- CRUD Condóminos -->
-    <script src="js/condominos.js"></script>
+    <script type="module" src="js/condominos.js"></script>
 
 </body>
 </html>
