--- a/condominos.html
+++ b/condominos.html
@@ -8,16 +8,19 @@
 <body>
 
 <header class="navbar">
+    <div class="menu-icon" id="menuBtn">☰</div>
     <div class="logo">Condomínio Amália Rodrigues</div>
+</header>
 
-    <nav class="menu">
-        <a href="dashboard.html">Dashboard</a>
-        <a href="condominos.html" class="active">Condóminos</a>
-    </nav>
+<div class="side-menu" id="sideMenu">
+    <a href="dashboard.html">Dashboard</a>
+    <a href="condominos.html">Condóminos</a>
+    <a href="ocorrencias.html">Ocorrências</a>
+    <a href="documentos.html">Documentos</a>
 
-    <div class="user-actions">
-        <button id="logoutBtn">Logout</button>
-    </div>
+    <button id="logoutBtn">Logout</button>
+</div>
+
 </header>
 
 <h2>Gestão de Condóminos</h2>
