--- a/condominos.html
+++ b/condominos.html
@@ -21,25 +21,27 @@
     <button id="logoutBtn">Logout</button>
 </div>
 
-</header>
+<div class="main-container">
 
-<h2>Gestão de Condóminos</h2>
+    <h2>Gestão de Condóminos</h2>
 
-<input id="filtro" placeholder="Filtrar por nome ou fração">
+    <input id="filtro" placeholder="Filtrar por nome ou fração">
 
-<table id="tabela">
-    <thead>
-        <tr>
-            <th>Fração</th>
-            <th>Nome</th>
-            <th>Permilagem</th>
-            <th>Telefone</th>
-            <th>Email</th>
-            <th>Ações</th>
-        </tr>
-    </thead>
-    <tbody></tbody>
-</table>
+    <table id="tabela">
+        <thead>
+            <tr>
+                <th>Fração</th>
+                <th>Nome</th>
+                <th>Permilagem</th>
+                <th>Telefone</th>
+                <th>Email</th>
+                <th>Ações</th>
+            </tr>
+        </thead>
+        <tbody></tbody>
+    </table>
+
+</div>
 
 <script type="module" src="js/condominos.js"></script>
 
