Rearrange table columns in condominos.html

--- a/condominos.html
+++ b/condominos.html
@@ -27,19 +27,21 @@
 
     <input id="filtro" placeholder="Filtrar por nome ou fração">
 
-    <table id="tabela">
-        <thead>
-            <tr>
-                <th>Fração</th>
-                <th>Nome</th>
-                <th>Permilagem</th>
-                <th>Telefone</th>
-                <th>Email</th>
-                <th>Ações</th>
-            </tr>
-        </thead>
-        <tbody></tbody>
-    </table>
+   <table id="tabela">
+    <thead>
+        <tr>
+            <th>Letra</th>
+            <th>Fração</th>
+            <th>Permilagem</th>
+            <th>Nome</th>
+            <th>Telefone</th>
+            <th>Email</th>
+            <th>Ações</th>
+        </tr>
+    </thead>
+    <tbody></tbody>
+</table>
+
 
 </div>
 
