--- a/condominos.html
+++ b/condominos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Gestão de Condóminos</title>
-    <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="css/global.css?v=20">
 </head>
 <body>
 
@@ -45,7 +45,7 @@
 
 </div>
 
-<script type="module" src="js/condominos.js"></script>
+<script type="module" src="js/condominos.js?v=20"></script>
 
 </body>
 </html>
