--- a/condominos.html
+++ b/condominos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Gestão de Condóminos</title>
-    <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="css/global.css?v=30">
 </head>
 <body>
 
@@ -17,7 +17,6 @@
     <a href="condominos.html">Condóminos</a>
     <a href="ocorrencias.html">Ocorrências</a>
     <a href="documentos.html">Documentos</a>
-
     <button id="logoutBtn">Logout</button>
 </div>
 
@@ -27,25 +26,24 @@
 
     <input id="filtro" placeholder="Filtrar por nome ou fração">
 
-   <table id="tabela">
-    <thead>
-        <tr>
-            <th>Letra</th>
-            <th>Fração</th>
-            <th>Permilagem</th>
-            <th>Nome</th>
-            <th>Telefone</th>
-            <th>Email</th>
-            <th>Ações</th>
-        </tr>
-    </thead>
-    <tbody></tbody>
-</table>
-
+    <table id="tabela">
+        <thead>
+            <tr>
+                <th>Letra</th>
+                <th>Fração</th>
+                <th>Permilagem</th>
+                <th>Nome</th>
+                <th>Telefone</th>
+                <th>Email</th>
+                <th>Ações</th>
+            </tr>
+        </thead>
+        <tbody></tbody>
+    </table>
 
 </div>
 
-<script type="module" src="js/condominos.js></script>
+<script type="module" src="js/condominos.js?v=30"></script>
 
 </body>
 </html>
