--- a/condominos.html
+++ b/condominos.html
@@ -26,20 +26,23 @@
 
     <input id="filtro" placeholder="Filtrar por nome ou fração">
 
-    <table id="tabela">
-        <thead>
-            <tr>
-                <th>Letra</th>
-                <th>Fração</th>
-                <th>Permilagem</th>
-                <th>Nome</th>
-                <th>Telefone</th>
-                <th>Email</th>
-                <th>Ações</th>
-            </tr>
-        </thead>
-        <tbody></tbody>
-    </table>
+   <table id="tabela">
+    <thead>
+        <tr>
+            <th>Letra</th>
+            <th>Fração</th>
+            <th>Permilagem</th>
+            <th>Nome</th>
+            <th>Telefone</th>
+            <th>Email</th>
+            <th>Isento</th>
+            <th>% Isenção</th>
+            <th>Ações</th>
+        </tr>
+    </thead>
+    <tbody></tbody>
+</table>
+
 
 </div>
 
