--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
 
+<header class="navbar">
+    <div class="logo">Condomínio Amália Rodrigues</div>
+</header>
+
 <div class="container">
   <h2>Entrar</h2>
 
@@ -21,4 +25,5 @@
 
 <script type="module" src="js/login.js"></script>
 </body>
+
 </html>
