--- a/dashboard.html
+++ b/dashboard.html
@@ -7,6 +7,10 @@
 </head>
 <body>
 
+<header class="navbar"> 
+<div class="logo">Condomínio Amália Rodrigues</div> 
+</header>
+  
 <div class="container">
   <h2>Bem-vindo ao Sistema</h2>
   <p>Login efetuado com sucesso.</p>
