--- a/quotas.html
+++ b/quotas.html
@@ -4,97 +4,44 @@
     <meta charset="UTF-8">
     <title>Quotas do Condomínio</title>
     <link rel="stylesheet" href="css/global.css">
-
-    <style>
-        body { font-family: Arial, sans-serif; padding: 20px; }
-        h1 { margin-bottom: 20px; }
-
-        #anoSelect {
-            padding: 6px;
-            margin-bottom: 20px;
-            font-size: 16px;
-        }
-
-        .fracao-bloco {
-            border: 1px solid #ccc;
-            padding: 15px;
-            margin-bottom: 25px;
-            border-radius: 6px;
-            background: #fafafa;
-        }
-
-        .linha-titulo {
-            font-weight: bold;
-            margin-bottom: 10px;
-            font-size: 15px;
-        }
-
-        .linha-meses {
-            display: grid;
-            grid-template-columns: repeat(12, 1fr);
-            gap: 6px;
-            margin-bottom: 10px;
-        }
-
-        .mes {
-            padding: 10px;
-            text-align: center;
-            border-radius: 4px;
-            cursor: pointer;
-            font-weight: bold;
-            border: 1px solid #999;
-        }
-
-        .mes.pago {
-            background: #4CAF50;
-            color: white;
-        }
-
-        .mes.nao-pago {
-            background: #ff4d4d;
-            color: white;
-        }
-
-        .linha-info {
-            margin-top: 10px;
-            font-size: 14px;
-        }
-
-        .obs-box {
-            width: 100%;
-            padding: 6px;
-            margin-top: 5px;
-        }
-
-        .guardar-btn {
-            margin-top: 10px;
-            padding: 8px 14px;
-            font-size: 14px;
-        }
-
-        #totalCondominio {
-            margin-top: 40px;
-            padding: 15px;
-            background: #e8e8e8;
-            border-radius: 6px;
-            font-size: 18px;
-            font-weight: bold;
-        }
-    </style>
 </head>
 
 <body>
 
-    <h1>Quotas do Condomínio</h1>
+    <!-- Barra azul superior -->
+    <div class="top-bar">
+        Sistema de Gestão de Quotas do Condomínio
+    </div>
 
-    <label for="anoSelect">Ano:</label>
-    <select id="anoSelect"></select>
+    <!-- Menu lateral (usa as classes do teu global.css) -->
+    <div class="menu-lateral">
+        <a href="index.html">🏠 Início</a>
+        <a href="condominos.html">👥 Condóminos</a>
+        <a href="quotas.html" class="ativo">💰 Quotas</a>
+        <a href="configurar.html">⚙️ Configurar Ano</a>
+    </div>
 
-    <div id="fracoesContainer"></div>
+    <!-- Conteúdo principal -->
+    <div class="conteudo">
 
-    <div id="totalCondominio">
-        Total Pago: 0 €<br>
-        Total em Dívida: 0 €
+        <div class="linha-topo">
+            <div>
+                <label for="anoSelect">Ano:</label>
+                <select id="anoSelect"></select>
+            </div>
+
+            <a href="configurar.html" class="btn-primario">
+                Configurar Ano
+            </a>
+        </div>
+
+        <div id="fracoesContainer"></div>
+
+        <div id="totalCondominio" class="caixa-total">
+            Total Pago: 0 €<br>
+            Total em Dívida: 0 €
+        </div>
+
     </div>
 
     <script type="module" src="js/quotas.js"></script>
