--- a/configurar.html
+++ b/configurar.html
@@ -27,6 +27,11 @@
         <label for="anoSelect">Ano:</label>
         <select id="anoSelect"></select>
 
+        <button id="guardarBtnTopo" class="btn-primario" style="margin: 15px 0;">
+    Guardar Configuração
+</button>
+
+
         <div id="fracoesContainer"></div>
 
         <button id="guardarBtn" class="btn-primario" style="margin-top:20px;">
