--- a/configurar.html
+++ b/configurar.html
@@ -34,6 +34,17 @@
 
         <div id="fracoesContainer"></div>
 
+        <div class="caixa-total" id="totaisCondominio">
+    <h3>Totais do Condomínio</h3>
+
+    <p><strong>Total Quotas:</strong> <span id="totalQuotas">0.00 €</span></p>
+    <p><strong>Total Extras:</strong> <span id="totalExtras">0.00 €</span></p>
+    <p><strong>Total Geral (Quotas + Extras):</strong> <span id="totalGeral">0.00 €</span></p>
+    <p><strong>Total com Isenções Aplicadas:</strong> <span id="totalComIsencao">0.00 €</span></p>
+    <p><strong>Total sem Isenções:</strong> <span id="totalSemIsencao">0.00 €</span></p>
+</div>
+
+
         <button id="guardarBtn" class="btn-primario" style="margin-top:20px;">
             Guardar Configuração
         </button>
