--- a/quotas.html
+++ b/quotas.html
@@ -27,14 +27,18 @@
 
         <h2>Gestão de Quotas</h2>
 
-        <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:20px;">
-            <div>
-                <label for="anoSelect">Ano:</label>
-                <select id="anoSelect"></select>
-            </div>
+       <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:20px;">
+    <div>
+        <label for="anoSelect">Ano:</label>
+        <select id="anoSelect"></select>
+    </div>
 
-            <a href="configurar.html" class="btn-primario">Configurar Ano</a>
-        </div>
+    <div style="display:flex; gap:10px;">
+        <button id="btnRecalcularTopo" class="btn-primario">Recalcular Totais</button>
+        <a href="configurar.html" class="btn-primario">Configurar Ano</a>
+    </div>
+</div>
+
 
         <div id="fracoesContainer"></div>
 
