--- a/condominos.html
+++ b/condominos.html
@@ -12,13 +12,15 @@
     <div class="logo">Condomínio Amália Rodrigues</div>
 </header>
 
-<div class="side-menu" id="sideMenu">
-    <a href="dashboard.html">Dashboard</a>
-    <a href="condominos.html">Condóminos</a>
-    <a href="ocorrencias.html">Ocorrências</a>
-    <a href="documentos.html">Documentos</a>
-    <button id="logoutBtn">Logout</button>
+<!-- MENU DROPDOWN -->
+<div id="sideMenu" class="side-menu">
+    <a href="dashboard.html">📊 Dashboard</a>
+    <a href="condominos.html">👥 Condóminos</a>
+    <a href="quotas.html" class="ativo">💰 Quotas</a>
+    <a href="configurar.html">⚙️ Configurar Ano</a>
+    <a href="index.html">🏠 Saír</a>
 </div>
+
 
 <div class="main-container">
 
