--- a/configurar.html
+++ b/configurar.html
@@ -13,12 +13,15 @@
         <span class="logo">Condomínio Amália Rodrigues</span>
     </div>
 
-    <div id="sideMenu" class="side-menu">
-        <a href="index.html">🏠 Início</a>
-        <a href="condominos.html">👥 Condóminos</a>
-        <a href="quotas.html">💰 Quotas</a>
-        <a href="configurar.html" class="ativo">⚙️ Configurar Ano</a>
-    </div>
+    <!-- MENU DROPDOWN -->
+<div id="sideMenu" class="side-menu">
+    <a href="dashboard.html">📊 Dashboard</a>
+    <a href="condominos.html">👥 Condóminos</a>
+    <a href="quotas.html" class="ativo">💰 Quotas</a>
+    <a href="configurar.html">⚙️ Configurar Ano</a>
+    <a href="index.html">🏠 Saír</a>
+</div>
+
 
     <div class="main-container">
 
