--- a/quotas.html
+++ b/quotas.html
@@ -14,13 +14,15 @@
         <span class="logo">Condomínio Amália Rodrigues</span>
     </div>
 
-    <!-- MENU DROPDOWN -->
-    <div id="sideMenu" class="side-menu">
-        <a href="index.html">🏠 Início</a>
-        <a href="condominos.html">👥 Condóminos</a>
-        <a href="quotas.html" class="ativo">💰 Quotas</a>
-        <a href="configurar.html">⚙️ Configurar Ano</a>
-    </div>
+   <!-- MENU DROPDOWN -->
+<div id="sideMenu" class="side-menu">
+    <a href="dashboard.html">📊 Dashboard</a>
+    <a href="condominos.html">👥 Condóminos</a>
+    <a href="quotas.html" class="ativo">💰 Quotas</a>
+    <a href="configurar.html">⚙️ Configurar Ano</a>
+    <a href="index.html">🏠 Saír</a>
+</div>
+
 
     <!-- CONTEÚDO PRINCIPAL -->
     <div class="main-container">
