--- a/dashboard.html
+++ b/dashboard.html
@@ -10,6 +10,16 @@
 <header class="navbar"> 
 <div class="logo">Condomínio Amália Rodrigues</div> 
 </header>
+
+<!-- MENU DROPDOWN -->
+<div id="sideMenu" class="side-menu">
+    <a href="dashboard.html">📊 Dashboard</a>
+    <a href="condominos.html">👥 Condóminos</a>
+    <a href="quotas.html" class="ativo">💰 Quotas</a>
+    <a href="configurar.html">⚙️ Configurar Ano</a>
+    <a href="index.html">🏠 Saír</a>
+</div>
+
   
 <div class="container">
   <h2>Bem-vindo ao Sistema</h2>
