--- a/condominos.html
+++ b/condominos.html
@@ -12,14 +12,14 @@
     <div class="logo">Condomínio Amália Rodrigues</div>
 </header>
 
-<!-- MENU DROPDOWN -->
 <div id="sideMenu" class="side-menu">
     <a href="dashboard.html">📊 Dashboard</a>
-    <a href="condominos.html">👥 Condóminos</a>
-    <a href="quotas.html" class="ativo">💰 Quotas</a>
+    <a href="condominos.html" class="ativo">👥 Condóminos</a>
+    <a href="quotas.html">💰 Quotas</a>
     <a href="configurar.html">⚙️ Configurar Ano</a>
     <a href="index.html">🏠 Saír</a>
 </div>
+
 
 
 <div class="main-container">
