--- a/condominos.html
+++ b/condominos.html
@@ -50,5 +50,11 @@
 
 <script type="module" src="js/condominos.js"></script>
 
+<script>
+    document.getElementById("menuBtn").addEventListener("click", () => {
+        document.getElementById("sideMenu").classList.toggle("open");
+    });
+</script>
+    
 </body>
 </html>
