--- a/dashboard.html
+++ b/dashboard.html
@@ -7,18 +7,19 @@
 </head>
 <body>
 
-<header class="navbar"> 
-<div class="logo">Condomínio Amália Rodrigues</div> 
+<header class="navbar">
+    <div class="menu-icon" id="menuBtn">☰</div>
+    <div class="logo">Condomínio Amália Rodrigues</div>
 </header>
 
-<!-- MENU DROPDOWN -->
 <div id="sideMenu" class="side-menu">
-    <a href="dashboard.html">📊 Dashboard</a>
+    <a href="dashboard.html" class="ativo">📊 Dashboard</a>
     <a href="condominos.html">👥 Condóminos</a>
-    <a href="quotas.html" class="ativo">💰 Quotas</a>
+    <a href="quotas.html">💰 Quotas</a>
     <a href="configurar.html">⚙️ Configurar Ano</a>
     <a href="index.html">🏠 Saír</a>
 </div>
+
 
   
 <div class="container">
@@ -27,5 +28,12 @@
 </div>
 
 <script type="module" src="js/auth-guard.js"></script>
+
+ <script>
+    document.getElementById("menuBtn").addEventListener("click", () => {
+        document.getElementById("sideMenu").classList.toggle("open");
+    });
+</script>
+ 
 </body>
 </html>
