--- a/configurar.html
+++ b/configurar.html
@@ -15,10 +15,10 @@
 
     <!-- MENU DROPDOWN -->
 <div id="sideMenu" class="side-menu">
-    <a href="dashboard.html">📊 Dashboard</a>
+    <a href="dashboard.html" >📊 Dashboard</a>
     <a href="condominos.html">👥 Condóminos</a>
-    <a href="quotas.html" class="ativo">💰 Quotas</a>
-    <a href="configurar.html">⚙️ Configurar Ano</a>
+    <a href="quotas.html">💰 Quotas</a>
+    <a href="configurar.html "class="ativo">⚙️ Configurar Ano</a>
     <a href="index.html">🏠 Saír</a>
 </div>
 
