--- a/condominos.html
+++ b/condominos.html
@@ -16,7 +16,7 @@
     <a href="dashboard.html">📊 Dashboard</a>
     <a href="condominos.html" class="ativo">👥 Condóminos</a>
     <a href="quotas.html">💰 Quotas</a>
-    <a href="configurar.html">⚙️ Configurar Ano</a>
+    <a href="configurar.html">⚙️ Configurar</a>
     <a href="index.html">🏠 Saír</a>
 </div>
 
