--- a/quotas.html
+++ b/quotas.html
@@ -19,7 +19,7 @@
     <a href="dashboard.html">📊 Dashboard</a>
     <a href="condominos.html">👥 Condóminos</a>
     <a href="quotas.html" class="ativo">💰 Quotas</a>
-    <a href="configurar.html">⚙️ Configurar Ano</a>
+    <a href="configurar.html">⚙️ Configurar</a>
     <a href="index.html">🏠 Saír</a>
 </div>
 
