--- a/condominos.html
+++ b/condominos.html
@@ -35,6 +35,7 @@
             <th>Fração</th>
             <th>Permilagem</th>
             <th>Nome</th>
+            <th>NIF</th>
             <th>Telefone</th>
             <th>Email</th>
             <th>Isento</th>
