--- a/recibos.html
+++ b/recibos.html
@@ -50,6 +50,11 @@
             </div>
         </div>
 
+        <div style="margin-top:20px;">
+    <label><input type="checkbox" id="chkQuota" checked> Quotas</label>
+    <label style="margin-left:20px;"><input type="checkbox" id="chkExtra" checked> Extras</label>
+</div>
+
         <!-- BOTÕES -->
         <div style="margin-top:20px; display:flex; gap:15px;">
             <button id="btnGerar" class="btn-primario">Gerar Recibo</button>
