--- a/recibos.html
+++ b/recibos.html
@@ -29,28 +29,45 @@
 
         <h2>Emissão de Recibos</h2>
 
-        <!-- SELEÇÃO DE FRAÇÃO -->
-        <div class="recibo-form">
-            <label for="fracaoSelect">Fração:</label>
-            <select id="fracaoSelect"></select>
-        </div>
+<!-- FRAÇÃO -->
+<div class="recibo-form">
+    <label for="fracaoSelect">Fração:</label>
+    <select id="fracaoSelect"></select>
+</div>
 
-        <!-- PERÍODO -->
-        <div class="recibo-form" style="display:flex; gap:20px; margin-top:10px;">
-            <div>
-                <label>Início:</label><br>
-                <select id="mesInicio"></select>
-                <select id="anoInicio"></select>
-            </div>
+<!-- PERÍODO -->
+<div class="recibo-form" style="display:flex; gap:20px; margin-top:10px;">
+    <div>
+        <label>Início:</label><br>
+        <select id="mesInicio"></select>
+        <select id="anoInicio"></select>
+    </div>
 
-            <div>
-                <label>Fim:</label><br>
-                <select id="mesFim"></select>
-                <select id="anoFim"></select>
-            </div>
-        </div>
+    <div>
+        <label>Fim:</label><br>
+        <select id="mesFim"></select>
+        <select id="anoFim"></select>
+    </div>
+</div>
 
-        <div style="margin-top:20px;">
+<!-- FORMA DE PAGAMENTO -->
+<div class="recibo-form" style="margin-top:10px; display:flex; gap:20px;">
+    <div>
+        <label for="formaPagamento">Forma de Pagamento:</label><br>
+        <select id="formaPagamento">
+            <option value="numerario">Numerário</option>
+            <option value="transferencia">Transferência</option>
+        </select>
+    </div>
+
+    <div id="dataTransferenciaBox" style="display:none;">
+        <label for="dataTransferencia">Data da Transferência:</label><br>
+        <input type="date" id="dataTransferencia">
+    </div>
+</div>
+
+<!-- QUOTAS / EXTRAS -->
+<div style="margin-top:15px;">
     <label><input type="checkbox" id="chkQuota" checked> Quotas</label>
     <label style="margin-left:20px;"><input type="checkbox" id="chkExtra" checked> Extras</label>
 </div>
