--- a/condominos.html
+++ b/condominos.html
@@ -17,6 +17,7 @@
     <a href="condominos.html" class="ativo">👥 Condóminos</a>
     <a href="quotas.html">💰 Quotas</a>
     <a href="configurar.html">⚙️ Configurar</a>
+    <a href="recibos.html">🧾 Recibos</a>
     <a href="index.html">🏠 Saír</a>
 </div>
 
