--- a/configurar.html
+++ b/configurar.html
@@ -19,6 +19,7 @@
     <a href="condominos.html">👥 Condóminos</a>
     <a href="quotas.html">💰 Quotas</a>
     <a href="configurar.html "class="ativo">⚙️ Configurar</a>
+    <a href="recibos.html">🧾 Recibos</a>
     <a href="index.html">🏠 Saír</a>
 </div>
 
