--- a/dashboard.html
+++ b/dashboard.html
@@ -18,6 +18,7 @@
     <a href="condominos.html">👥 Condóminos</a>
     <a href="quotas.html">💰 Quotas</a>
     <a href="configurar.html">⚙️ Configurar</a>
+    <a href="recibos.html">🧾 Recibos</a>
     <a href="index.html">🏠 Saír</a>
 </div>
 
