--- a/quotas.html
+++ b/quotas.html
@@ -20,6 +20,7 @@
     <a href="condominos.html">👥 Condóminos</a>
     <a href="quotas.html" class="ativo">💰 Quotas</a>
     <a href="configurar.html">⚙️ Configurar</a>
+    <a href="recibos.html">🧾 Recibos</a>
     <a href="index.html">🏠 Saír</a>
 </div>
 
