--- a/recibos.html
+++ b/recibos.html
@@ -67,10 +67,11 @@
 </div>
 
 <!-- QUOTAS / EXTRAS -->
-<div style="margin-top:15px;">
+<div class="linha-checkbox">
     <label><input type="checkbox" id="chkQuota" checked> Quotas</label>
-    <label style="margin-left:20px;"><input type="checkbox" id="chkExtra" checked> Extras</label>
+    <label><input type="checkbox" id="chkExtra" checked> Extras</label>
 </div>
+
 
         <!-- BOTÕES -->
         <div style="margin-top:20px; display:flex; gap:15px;">
