--- a/dashboard.html
+++ b/dashboard.html
@@ -26,20 +26,7 @@
 
     <h2>Resumo de Dívidas</h2>
 
-    <table id="tabela-dashboard">
-    <thead>
-        <tr>
-            <th>Letra</th>
-            <th>Fração</th>
-            <th>Nome</th>
-            <th>Total Dívida</th>
-            <th>Início Dívida</th>
-            <th>Fim Dívida</th>
-        </tr>
-    </thead>
-    <tbody></tbody>
-</table>
-
+  <div id="dashboard-lista" class="dashboard-container"></div>
 
 </div>
 
