--- a/dashboard.html
+++ b/dashboard.html
@@ -28,6 +28,12 @@
 
   <div id="dashboard-lista" class="dashboard-container"></div>
 
+    <div class="dashboard-actions">
+    <button id="btnExcel" class="btn-primario">Exportar Excel</button>
+    <button id="btnPDF" class="btn-primario">Exportar PDF</button>
+</div>
+
+
 </div>
 
 <script type="module" src="js/dashboard.js"></script>
