--- a/dashboard.html
+++ b/dashboard.html
@@ -24,33 +24,10 @@
 
 <div class="main-container">
 
-    <!DOCTYPE html>
-<html lang="pt">
-<head>
-    <meta charset="UTF-8">
-    <title>Dashboard</title>
-    <link rel="stylesheet" href="css/global.css">
-</head>
-
-<body>
-
-<header class="navbar">
-    <div class="menu-icon" id="menuBtn">☰</div>
-    <div class="logo">Condomínio Amália Rodrigues</div>
-</header>
-
-<div id="sideMenu" class="side-menu">
-    <a href="dashboard.html" class="ativo">📊 Dashboard</a>
-    <a href="condominos.html">👥 Condóminos</a>
-    <a href="quotas.html">💰 Quotas</a>
-    <a href="configurar.html">⚙️ Configurar</a>
-    <a href="recibos.html">🧾 Recibos</a>
-    <a href="index.html">🏠 Saír</a>
-</div>
-
-<div class="main-container">
-
     <h2>Resumo de Dívidas</h2>
+
+    <!-- Total geral aqui -->
+    <div id="total-geral" class="dashboard-total"></div>
 
     <div class="dashboard-actions">
         <button id="btnExcel" class="btn-primario">Exportar Excel</button>
