--- a/recibos.html
+++ b/recibos.html
@@ -5,7 +5,7 @@
     <title>Emissão de Recibos</title>
     <link rel="stylesheet" href="css/global.css">
 
-    <!-- DataTables (filtros e pesquisa na tabela) -->
+    <!-- DataTables -->
     <link rel="stylesheet" href="https://cdn.datatables.net/2.0.3/css/dataTables.dataTables.min.css">
 </head>
 
@@ -87,11 +87,14 @@
             <button id="btnImprimir" class="btn-primario" disabled>Imprimir PDF</button>
             <button id="btnEnviar" class="btn-primario" disabled>Enviar por Email</button>
 
-            <!-- Botão de testes -->
             <button id="btnResetContador" class="btn-primario" style="background:#b71c1c;">
-                Limpar Contador (Testes)
+                Limpar contador
             </button>
         </div>
+
+        <p style="font-size:12px; color:#555; margin-top:5px;">
+            Necessita código informática
+        </p>
 
         <!-- ÁREA DO RECIBO GERADO -->
         <div id="reciboContainer" style="margin-top:30px; display:none;">
