--- a/recibos.html
+++ b/recibos.html
@@ -93,7 +93,7 @@
         </div>
 
         <p style="font-size:12px; color:#555; margin-top:5px;">
-            Necessita código informática
+            Nota: Botão "Limpar Contador" Necessita código com credenciais informática
         </p>
 
         <!-- ÁREA DO RECIBO GERADO -->
