--- a/recibos.html
+++ b/recibos.html
@@ -141,7 +141,7 @@
     </script>
 
     <!-- DataTables -->
-    <script src="https://cdn.datatables.net/2.0.3/js/dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/2.0.3/js/dataTables.js"></script>
 
     <!-- JS dos recibos -->
     <script type="module" src="js/recibos.js"></script>
