--- a/recibos.html
+++ b/recibos.html
@@ -140,11 +140,13 @@
         }
     </script>
 
-    <!-- DataTables -->
-    <script src="https://cdn.datatables.net/2.0.3/js/dataTables.js"></script>
+    <!-- DataTables moderno (sem jQuery) -->
+<link rel="stylesheet" href="https://cdn.datatables.net/v/dt/dt-2.0.3/datatables.min.css">
+<script src="https://cdn.datatables.net/v/dt/dt-2.0.3/datatables.min.js"></script>
 
-    <!-- JS dos recibos -->
-    <script type="module" src="js/recibos.js"></script>
+<!-- JS dos recibos -->
+<script type="module" src="js/recibos.js"></script>
+
 
 </body>
 </html>
