--- a/recibos.html
+++ b/recibos.html
@@ -6,6 +6,7 @@
 
     <!-- CSS global -->
     <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/v/dt/dt-2.0.3/datatables.min.css?v=5">
    
 </head>
 
