--- a/recibos.html
+++ b/recibos.html
@@ -6,8 +6,9 @@
 
     <!-- CSS global -->
     <link rel="stylesheet" href="css/global.css">
-    <link rel="stylesheet" href="https://cdn.datatables.net/v/dt/dt-2.0.3/datatables.min.css?v=5">
-   
+
+    <!-- DataTables moderno (sem jQuery) -->
+    <link rel="stylesheet" href="https://cdn.datatables.net/v/dt/dt-2.0.3/datatables.min.css?v=999999">
 </head>
 
 <body>
@@ -141,8 +142,8 @@
         }
     </script>
 
-    <!-- DataTables moderno (sem jQuery) - JS -->
-    <script src="https://cdn.datatables.net/v/dt/dt-2.0.3/datatables.min.js"></script>
+    <!-- DataTables moderno (sem jQuery) -->
+    <script src="https://cdn.datatables.net/v/dt/dt-2.0.3/datatables.min.js?v=999999"></script>
 
     <!-- JS dos recibos -->
     <script type="module" src="js/recibos.js"></script>
