--- a/recibos.html
+++ b/recibos.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/global.css">
 
     <!-- DataTables moderno (sem jQuery) -->
-    <link rel="stylesheet" href="https://cdn.datatables.net/v/dt/dt-2.0.3/datatables.min.css?v=999999">
+    <link rel="stylesheet" href="https://cdn.datatables.net/2.0.3/css/dataTables.dataTables.min.css">
 </head>
 
 <body>
@@ -143,7 +143,7 @@
     </script>
 
     <!-- DataTables moderno (sem jQuery) -->
-    <script src="https://cdn.datatables.net/v/dt/dt-2.0.3/datatables.min.js?v=999999"></script>
+    <script src="https://cdn.datatables.net/2.0.3/js/dataTables.min.js"></script>
 
     <!-- JS dos recibos -->
     <script type="module" src="js/recibos.js"></script>
