--- a/recibos.html
+++ b/recibos.html
@@ -4,22 +4,16 @@
     <meta charset="UTF-8">
     <title>Emissão de Recibos</title>
 
-    <!-- CSS global -->
     <link rel="stylesheet" href="css/global.css">
-
-    <!-- DataTables moderno (sem jQuery) -->
-    <link rel="stylesheet" href="https://cdn.datatables.net/2.0.3/css/dataTables.dataTables.min.css">
 </head>
 
 <body>
 
-    <!-- NAVBAR SUPERIOR -->
     <div class="navbar">
         <span class="menu-icon" onclick="toggleMenu()">☰</span>
         <span class="logo">Condomínio Amália Rodrigues</span>
     </div>
 
-    <!-- MENU LATERAL -->
     <div id="sideMenu" class="side-menu">
         <a href="dashboard.html">📊 Dashboard</a>
         <a href="condominos.html">👥 Condóminos</a>
@@ -29,18 +23,15 @@
         <a href="index.html">🏠 Saír</a>
     </div>
 
-    <!-- CONTEÚDO PRINCIPAL -->
     <div class="main-container">
 
         <h2>Emissão de Recibos</h2>
 
-        <!-- FRAÇÃO -->
         <div class="recibo-form">
             <label for="fracaoSelect">Fração:</label>
             <select id="fracaoSelect"></select>
         </div>
 
-        <!-- PERÍODO -->
         <div class="recibo-form" style="display:flex; gap:20px; margin-top:10px;">
             <div>
                 <label>Início:</label><br>
@@ -55,7 +46,6 @@
             </div>
         </div>
 
-        <!-- FORMA DE PAGAMENTO -->
         <div class="recibo-form" style="margin-top:10px; display:flex; gap:20px;">
             <div>
                 <label for="formaPagamento">Forma de Pagamento:</label><br>
@@ -71,19 +61,16 @@
             </div>
         </div>
 
-        <!-- QUOTAS / EXTRAS -->
         <div class="linha-checkbox">
             <label><input type="checkbox" id="chkQuota" checked> Quotas</label>
             <label><input type="checkbox" id="chkExtra" checked> Extras</label>
         </div>
 
-        <!-- OBSERVAÇÕES -->
         <div class="recibo-form" style="margin-top:10px;">
             <label for="observacoes">Observações:</label><br>
             <textarea id="observacoes" rows="3" style="width:100%;"></textarea>
         </div>
 
-        <!-- BOTÕES -->
         <div style="margin-top:20px; display:flex; gap:15px;">
             <button id="btnGerar" class="btn-primario">Gerar Recibo</button>
             <button id="btnImprimir" class="btn-primario" disabled>Imprimir PDF</button>
@@ -98,9 +85,7 @@
             Nota: Botão "Limpar Contador" necessita código com credenciais informática
         </p>
 
-        <!-- ÁREA DO RECIBO GERADO -->
         <div id="reciboContainer" style="margin-top:30px; display:none;">
-
             <div class="recibo-via">
                 <h3>RECIBO – ORIGINAL</h3>
                 <div id="reciboOriginal"></div>
@@ -112,11 +97,11 @@
                 <h3>RECIBO – DUPLICADO</h3>
                 <div id="reciboDuplicado"></div>
             </div>
-
         </div>
 
-        <!-- TABELA DE RECIBOS EMITIDOS -->
         <h3 style="margin-top:40px;">Recibos emitidos</h3>
+
+        <input type="text" id="filtroTabela" placeholder="Filtrar recibos..." style="margin-bottom:10px; width:250px;">
 
         <table id="tabelaRecibos">
             <thead>
@@ -142,10 +127,6 @@
         }
     </script>
 
-    <!-- DataTables moderno (sem jQuery) -->
-    <script src="https://cdn.datatables.net/2.0.3/js/dataTables.min.js"></script>
-
-    <!-- JS dos recibos -->
     <script type="module" src="js/recibos.js"></script>
 
 </body>
