--- a/quotas.html
+++ b/quotas.html
@@ -39,6 +39,8 @@
     <div style="display:flex; gap:10px;">
         <button id="btnRecalcularTopo" class="btn-primario">Recalcular Totais</button>
         <a href="configurar.html" class="btn-primario">Configurar Ano</a>
+        <button id="btnExportExcel" class="btn-primario">Exportar Excel</button>
+        <button id="btnExportPDF" class="btn-primario">Exportar PDF</button>
     </div>
 </div>
 
