--- a/quotas.html
+++ b/quotas.html
@@ -61,6 +61,13 @@
         }
     </script>
 
-    <script type="module" src="js/quotas.js"></script>
+    <!-- Bibliotecas necessárias -->
+<script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
+
+<!-- O teu JS -->
+<script type="module" src="js/quotas.js"></script>
+
 </body>
 </html>
